--- a/style.css
+++ b/style.css
@@ -1,39 +1,28 @@
-h1 {
-    font-family: Times;
-    font-size: 55px;
-    color: #050069;
-    text-align:center;
-}
-p {
-    font-family: Times;
-    color: #FFA200;
-    font-size:2em;
-    text-align: center;
-}
-ul {
-    color: red;
-    font-size:30px;
-}
-ol {
-    color: blue;
-}
 body {
-    background-color:#D5EDEB
+    background-color:#D5EDEB!important;
 }
-img {
-    height: 200px;
-    width: 500px;
-    text-align: center;
+
+
+h1 {
+  color: red!important;
+  text-align: center;
 }
+
 h2 {
-    text-align: center;
+  color: orange!important;
+  text-align: center;
 }
-h3 {
-    text-align: center;
+
+ul {
+  font-size: 18px;
 }
-h4 {
-    font-family: Times;
-    color: #FFA200;
-    font-size:2em;
-    text-align: center;
+
+ul li {
+  color: blue;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
